--- a/examples/test-merge-pr.yml
+++ b/examples/test-merge-pr.yml
@@ -16,7 +16,7 @@ jobs:
     if: github.event_name == 'pull_request' || contains(github.event.comment.body, '/test')
     runs-on: ubuntu-latest
     steps:
-      - name: Test PR
+      - name: Test and merge PR # https://github.com/marketplace/actions/test-pr-action
         uses: phucbm/test-pr-action@v1
         with:
           dependabot-auto-merge: 'true'  # Optional: auto-merge Dependabot PRs
